Added script to store output in DB

--- a/squad_optimization/squad_optimizer.ipynb
+++ b/squad_optimization/squad_optimizer.ipynb
@@ -23,15 +23,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import itertools\n",
     "import copy\n",
+    "\n",
+    "from sqlalchemy import create_engine\n",
+    "# import psycopg2\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +60,7 @@
        "dict_keys(['events', 'game_settings', 'phases', 'teams', 'total_players', 'elements', 'element_stats', 'element_types'])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,16 +523,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "squad = squad_optimizer('total_points')"
+    "squad = squad_optimizer('ict_index')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -561,118 +563,130 @@
        "      <th>selected_by_percent</th>\n",
        "      <th>actual_cost</th>\n",
        "      <th>total_points</th>\n",
+       "      <th>ict_index</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Nick</td>\n",
-       "      <td>Pope</td>\n",
-       "      <td>Newcastle</td>\n",
+       "      <td>David</td>\n",
+       "      <td>Raya Martin</td>\n",
+       "      <td>Brentford</td>\n",
        "      <td>Goalkeeper</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>65</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>61</td>\n",
+       "      <td>48.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Dean</td>\n",
-       "      <td>Henderson</td>\n",
-       "      <td>Nott'm Forest</td>\n",
+       "      <td>Jordan</td>\n",
+       "      <td>Pickford</td>\n",
+       "      <td>Everton</td>\n",
        "      <td>Goalkeeper</td>\n",
-       "      <td>12.5</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>61</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>55</td>\n",
+       "      <td>50.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Gabriel</td>\n",
-       "      <td>dos Santos Magalhães</td>\n",
-       "      <td>Arsenal</td>\n",
+       "      <td>James</td>\n",
+       "      <td>Tarkowski</td>\n",
+       "      <td>Everton</td>\n",
        "      <td>Defender</td>\n",
-       "      <td>11.5</td>\n",
-       "      <td>5.1</td>\n",
-       "      <td>67</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>41</td>\n",
+       "      <td>68.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>William</td>\n",
-       "      <td>Saliba</td>\n",
-       "      <td>Arsenal</td>\n",
+       "      <td>Diogo</td>\n",
+       "      <td>Dalot Teixeira</td>\n",
+       "      <td>Man Utd</td>\n",
        "      <td>Defender</td>\n",
-       "      <td>33.7</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>68</td>\n",
+       "      <td>12.5</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>49</td>\n",
+       "      <td>72.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Timothy</td>\n",
-       "      <td>Castagne</td>\n",
-       "      <td>Leicester</td>\n",
-       "      <td>Defender</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>59</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>Kieran</td>\n",
        "      <td>Trippier</td>\n",
        "      <td>Newcastle</td>\n",
        "      <td>Defender</td>\n",
-       "      <td>64.0</td>\n",
+       "      <td>64.9</td>\n",
        "      <td>5.9</td>\n",
-       "      <td>89</td>\n",
+       "      <td>96</td>\n",
+       "      <td>108.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Ivan</td>\n",
+       "      <td>Perišić</td>\n",
+       "      <td>Spurs</td>\n",
+       "      <td>Defender</td>\n",
+       "      <td>21.7</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>45</td>\n",
+       "      <td>75.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Fabian</td>\n",
-       "      <td>Schär</td>\n",
-       "      <td>Newcastle</td>\n",
+       "      <td>Aaron</td>\n",
+       "      <td>Cresswell</td>\n",
+       "      <td>West Ham</td>\n",
        "      <td>Defender</td>\n",
-       "      <td>11.6</td>\n",
-       "      <td>4.9</td>\n",
-       "      <td>60</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>4.8</td>\n",
+       "      <td>37</td>\n",
+       "      <td>76.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>Martin</td>\n",
+       "      <td>Ødegaard</td>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>Midfielder</td>\n",
+       "      <td>14.3</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>77</td>\n",
+       "      <td>114.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
        "      <td>Gabriel</td>\n",
        "      <td>Martinelli Silva</td>\n",
        "      <td>Arsenal</td>\n",
        "      <td>Midfielder</td>\n",
-       "      <td>49.3</td>\n",
+       "      <td>48.4</td>\n",
        "      <td>6.8</td>\n",
-       "      <td>71</td>\n",
+       "      <td>77</td>\n",
+       "      <td>117.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <th>9</th>\n",
        "      <td>Pascal</td>\n",
        "      <td>Groß</td>\n",
        "      <td>Brighton</td>\n",
        "      <td>Midfielder</td>\n",
-       "      <td>14.0</td>\n",
+       "      <td>13.5</td>\n",
        "      <td>5.6</td>\n",
-       "      <td>68</td>\n",
+       "      <td>69</td>\n",
+       "      <td>102.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>10</th>\n",
        "      <td>Leandro</td>\n",
        "      <td>Trossard</td>\n",
        "      <td>Brighton</td>\n",
        "      <td>Midfielder</td>\n",
-       "      <td>27.1</td>\n",
+       "      <td>27.9</td>\n",
        "      <td>7.1</td>\n",
-       "      <td>78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Rodrigo</td>\n",
-       "      <td>Moreno</td>\n",
-       "      <td>Leeds</td>\n",
-       "      <td>Midfielder</td>\n",
-       "      <td>6.6</td>\n",
-       "      <td>6.3</td>\n",
-       "      <td>64</td>\n",
+       "      <td>80</td>\n",
+       "      <td>132.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
@@ -680,9 +694,10 @@
        "      <td>Almirón Rejala</td>\n",
        "      <td>Newcastle</td>\n",
        "      <td>Midfielder</td>\n",
-       "      <td>31.3</td>\n",
+       "      <td>35.5</td>\n",
        "      <td>5.8</td>\n",
-       "      <td>87</td>\n",
+       "      <td>93</td>\n",
+       "      <td>115.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
@@ -690,9 +705,10 @@
        "      <td>Toney</td>\n",
        "      <td>Brentford</td>\n",
        "      <td>Forward</td>\n",
-       "      <td>15.5</td>\n",
+       "      <td>19.0</td>\n",
        "      <td>7.4</td>\n",
-       "      <td>70</td>\n",
+       "      <td>83</td>\n",
+       "      <td>129.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -700,9 +716,10 @@
        "      <td>Haaland</td>\n",
        "      <td>Man City</td>\n",
        "      <td>Forward</td>\n",
-       "      <td>81.4</td>\n",
+       "      <td>82.8</td>\n",
        "      <td>12.2</td>\n",
-       "      <td>122</td>\n",
+       "      <td>123</td>\n",
+       "      <td>178.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
@@ -710,57 +727,95 @@
        "      <td>Kane</td>\n",
        "      <td>Spurs</td>\n",
        "      <td>Forward</td>\n",
-       "      <td>25.6</td>\n",
+       "      <td>27.4</td>\n",
        "      <td>11.6</td>\n",
-       "      <td>91</td>\n",
+       "      <td>102</td>\n",
+       "      <td>180.3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   first_name           second_name      team_name    position  \\\n",
-       "0        Nick                  Pope      Newcastle  Goalkeeper   \n",
-       "1        Dean             Henderson  Nott'm Forest  Goalkeeper   \n",
-       "2     Gabriel  dos Santos Magalhães        Arsenal    Defender   \n",
-       "3     William                Saliba        Arsenal    Defender   \n",
-       "4     Timothy              Castagne      Leicester    Defender   \n",
-       "5      Kieran              Trippier      Newcastle    Defender   \n",
-       "6      Fabian                 Schär      Newcastle    Defender   \n",
-       "7     Gabriel      Martinelli Silva        Arsenal  Midfielder   \n",
-       "8      Pascal                  Groß       Brighton  Midfielder   \n",
-       "9     Leandro              Trossard       Brighton  Midfielder   \n",
-       "10    Rodrigo                Moreno          Leeds  Midfielder   \n",
-       "11     Miguel        Almirón Rejala      Newcastle  Midfielder   \n",
-       "12       Ivan                 Toney      Brentford     Forward   \n",
-       "13     Erling               Haaland       Man City     Forward   \n",
-       "14      Harry                  Kane          Spurs     Forward   \n",
+       "   first_name       second_name  team_name    position  selected_by_percent  \\\n",
+       "0       David       Raya Martin  Brentford  Goalkeeper                  7.5   \n",
+       "1      Jordan          Pickford    Everton  Goalkeeper                  6.0   \n",
+       "2       James         Tarkowski    Everton    Defender                  1.5   \n",
+       "3       Diogo    Dalot Teixeira    Man Utd    Defender                 12.5   \n",
+       "4      Kieran          Trippier  Newcastle    Defender                 64.9   \n",
+       "5        Ivan           Perišić      Spurs    Defender                 21.7   \n",
+       "6       Aaron         Cresswell   West Ham    Defender                  2.5   \n",
+       "7      Martin          Ødegaard    Arsenal  Midfielder                 14.3   \n",
+       "8     Gabriel  Martinelli Silva    Arsenal  Midfielder                 48.4   \n",
+       "9      Pascal              Groß   Brighton  Midfielder                 13.5   \n",
+       "10    Leandro          Trossard   Brighton  Midfielder                 27.9   \n",
+       "11     Miguel    Almirón Rejala  Newcastle  Midfielder                 35.5   \n",
+       "12       Ivan             Toney  Brentford     Forward                 19.0   \n",
+       "13     Erling           Haaland   Man City     Forward                 82.8   \n",
+       "14      Harry              Kane      Spurs     Forward                 27.4   \n",
        "\n",
-       "    selected_by_percent  actual_cost  total_points  \n",
-       "0                  21.0          5.3            65  \n",
-       "1                  12.5          4.7            61  \n",
-       "2                  11.5          5.1            67  \n",
-       "3                  33.7          5.3            68  \n",
-       "4                   7.8          4.7            59  \n",
-       "5                  64.0          5.9            89  \n",
-       "6                  11.6          4.9            60  \n",
-       "7                  49.3          6.8            71  \n",
-       "8                  14.0          5.6            68  \n",
-       "9                  27.1          7.1            78  \n",
-       "10                  6.6          6.3            64  \n",
-       "11                 31.3          5.8            87  \n",
-       "12                 15.5          7.4            70  \n",
-       "13                 81.4         12.2           122  \n",
-       "14                 25.6         11.6            91  "
+       "    actual_cost  total_points  ict_index  \n",
+       "0           4.6            61       48.5  \n",
+       "1           4.5            55       50.1  \n",
+       "2           4.4            41       68.3  \n",
+       "3           4.8            49       72.2  \n",
+       "4           5.9            96      108.2  \n",
+       "5           5.5            45       75.3  \n",
+       "6           4.8            37       76.8  \n",
+       "7           6.4            77      114.5  \n",
+       "8           6.8            77      117.8  \n",
+       "9           5.6            69      102.7  \n",
+       "10          7.1            80      132.9  \n",
+       "11          5.8            93      115.8  \n",
+       "12          7.4            83      129.6  \n",
+       "13         12.2           123      178.2  \n",
+       "14         11.6           102      180.3  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "squad"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write the created DataFrame to a database"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The created dataframe is stored in the default PostgreSQL database (template1) running on Docker "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "engine = create_engine('postgresql://postgres:postgres@localhost:5432/template1')\n",
+    "squad.to_sql('fpl_squad', engine)"
    ]
   },
   {
@@ -773,7 +828,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 ('base')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -787,12 +842,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "40f435dca853d358a72165d8a9258ab55dbf6149f6bf924972afc083f5d0cc43"
+    "hash": "8a1681bfdcdb7de3ece45ae5451e0bb2bd8561d1ebfbda5ab44fa29238e61169"
    }
   }
  },
