--- a/squad_optimization/squad_optimizer.ipynb
+++ b/squad_optimization/squad_optimizer.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,8 @@
     "import numpy as np\n",
     "import copy\n",
     "\n",
+    "import psycopg2\n",
     "from sqlalchemy import create_engine\n",
-    "# import psycopg2\n",
     "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "dict_keys(['events', 'game_settings', 'phases', 'teams', 'total_players', 'elements', 'element_stats', 'element_types'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
        "      <td>Trossard</td>\n",
        "      <td>Brighton</td>\n",
        "      <td>Midfielder</td>\n",
-       "      <td>27.9</td>\n",
+       "      <td>27.8</td>\n",
        "      <td>7.1</td>\n",
        "      <td>80</td>\n",
        "      <td>132.9</td>\n",
@@ -748,7 +748,7 @@
        "7      Martin          Ødegaard    Arsenal  Midfielder                 14.3   \n",
        "8     Gabriel  Martinelli Silva    Arsenal  Midfielder                 48.4   \n",
        "9      Pascal              Groß   Brighton  Midfielder                 13.5   \n",
-       "10    Leandro          Trossard   Brighton  Midfielder                 27.9   \n",
+       "10    Leandro          Trossard   Brighton  Midfielder                 27.8   \n",
        "11     Miguel    Almirón Rejala  Newcastle  Midfielder                 35.5   \n",
        "12       Ivan             Toney  Brentford     Forward                 19.0   \n",
        "13     Erling           Haaland   Man City     Forward                 82.8   \n",
@@ -772,7 +772,7 @@
        "14         11.6           102      180.3  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +786,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Write the created DataFrame to a database"
+    "# Write the DataFrame to a database"
    ]
   },
   {
@@ -801,6 +801,34 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# establishing the connection\n",
+    "conn = psycopg2.connect(\n",
+    "    database='template1', user='postgres', password='postgres', host='localhost', port= '5432'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setting auto commit true\n",
+    "conn.autocommit = True\n",
+    "\n",
+    "# Creating a cursor object using the cursor() method\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Delete the contents of the table and load the dataframe\n",
+    "cursor.execute('''DROP TABLE IF EXISTS fpl_squad''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -808,7 +836,7 @@
        "15"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.4 (tags/v3.10.4:9d38120, Mar 23 2022, 23:13:41) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
