Write data into Supabase DB

--- a/squad_optimization/squad_optimizer.ipynb
+++ b/squad_optimization/squad_optimizer.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,6 +31,9 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import copy\n",
+    "import sys\n",
+    "\n",
+    "import config\n",
     "\n",
     "import psycopg2\n",
     "from sqlalchemy import create_engine\n",
@@ -51,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +63,7 @@
        "dict_keys(['events', 'game_settings', 'phases', 'teams', 'total_players', 'elements', 'element_stats', 'element_types'])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +576,7 @@
        "      <td>Raya Martin</td>\n",
        "      <td>Brentford</td>\n",
        "      <td>Goalkeeper</td>\n",
-       "      <td>7.5</td>\n",
+       "      <td>7.4</td>\n",
        "      <td>4.6</td>\n",
        "      <td>61</td>\n",
        "      <td>48.5</td>\n",
@@ -606,7 +609,7 @@
        "      <td>Dalot Teixeira</td>\n",
        "      <td>Man Utd</td>\n",
        "      <td>Defender</td>\n",
-       "      <td>12.5</td>\n",
+       "      <td>12.9</td>\n",
        "      <td>4.8</td>\n",
        "      <td>49</td>\n",
        "      <td>72.2</td>\n",
@@ -617,7 +620,7 @@
        "      <td>Trippier</td>\n",
        "      <td>Newcastle</td>\n",
        "      <td>Defender</td>\n",
-       "      <td>64.9</td>\n",
+       "      <td>65.0</td>\n",
        "      <td>5.9</td>\n",
        "      <td>96</td>\n",
        "      <td>108.2</td>\n",
@@ -628,7 +631,7 @@
        "      <td>Perišić</td>\n",
        "      <td>Spurs</td>\n",
        "      <td>Defender</td>\n",
-       "      <td>21.7</td>\n",
+       "      <td>21.5</td>\n",
        "      <td>5.5</td>\n",
        "      <td>45</td>\n",
        "      <td>75.3</td>\n",
@@ -639,7 +642,7 @@
        "      <td>Cresswell</td>\n",
        "      <td>West Ham</td>\n",
        "      <td>Defender</td>\n",
-       "      <td>2.5</td>\n",
+       "      <td>2.4</td>\n",
        "      <td>4.8</td>\n",
        "      <td>37</td>\n",
        "      <td>76.8</td>\n",
@@ -650,7 +653,7 @@
        "      <td>Ødegaard</td>\n",
        "      <td>Arsenal</td>\n",
        "      <td>Midfielder</td>\n",
-       "      <td>14.3</td>\n",
+       "      <td>14.6</td>\n",
        "      <td>6.4</td>\n",
        "      <td>77</td>\n",
        "      <td>114.5</td>\n",
@@ -661,7 +664,7 @@
        "      <td>Martinelli Silva</td>\n",
        "      <td>Arsenal</td>\n",
        "      <td>Midfielder</td>\n",
-       "      <td>48.4</td>\n",
+       "      <td>48.2</td>\n",
        "      <td>6.8</td>\n",
        "      <td>77</td>\n",
        "      <td>117.8</td>\n",
@@ -672,7 +675,7 @@
        "      <td>Groß</td>\n",
        "      <td>Brighton</td>\n",
        "      <td>Midfielder</td>\n",
-       "      <td>13.5</td>\n",
+       "      <td>13.4</td>\n",
        "      <td>5.6</td>\n",
        "      <td>69</td>\n",
        "      <td>102.7</td>\n",
@@ -683,7 +686,7 @@
        "      <td>Trossard</td>\n",
        "      <td>Brighton</td>\n",
        "      <td>Midfielder</td>\n",
-       "      <td>27.8</td>\n",
+       "      <td>27.6</td>\n",
        "      <td>7.1</td>\n",
        "      <td>80</td>\n",
        "      <td>132.9</td>\n",
@@ -694,7 +697,7 @@
        "      <td>Almirón Rejala</td>\n",
        "      <td>Newcastle</td>\n",
        "      <td>Midfielder</td>\n",
-       "      <td>35.5</td>\n",
+       "      <td>35.8</td>\n",
        "      <td>5.8</td>\n",
        "      <td>93</td>\n",
        "      <td>115.8</td>\n",
@@ -705,7 +708,7 @@
        "      <td>Toney</td>\n",
        "      <td>Brentford</td>\n",
        "      <td>Forward</td>\n",
-       "      <td>19.0</td>\n",
+       "      <td>19.4</td>\n",
        "      <td>7.4</td>\n",
        "      <td>83</td>\n",
        "      <td>129.6</td>\n",
@@ -716,7 +719,7 @@
        "      <td>Haaland</td>\n",
        "      <td>Man City</td>\n",
        "      <td>Forward</td>\n",
-       "      <td>82.8</td>\n",
+       "      <td>82.9</td>\n",
        "      <td>12.2</td>\n",
        "      <td>123</td>\n",
        "      <td>178.2</td>\n",
@@ -727,7 +730,7 @@
        "      <td>Kane</td>\n",
        "      <td>Spurs</td>\n",
        "      <td>Forward</td>\n",
-       "      <td>27.4</td>\n",
+       "      <td>27.3</td>\n",
        "      <td>11.6</td>\n",
        "      <td>102</td>\n",
        "      <td>180.3</td>\n",
@@ -738,21 +741,21 @@
       ],
       "text/plain": [
        "   first_name       second_name  team_name    position  selected_by_percent  \\\n",
-       "0       David       Raya Martin  Brentford  Goalkeeper                  7.5   \n",
+       "0       David       Raya Martin  Brentford  Goalkeeper                  7.4   \n",
        "1      Jordan          Pickford    Everton  Goalkeeper                  6.0   \n",
        "2       James         Tarkowski    Everton    Defender                  1.5   \n",
-       "3       Diogo    Dalot Teixeira    Man Utd    Defender                 12.5   \n",
-       "4      Kieran          Trippier  Newcastle    Defender                 64.9   \n",
-       "5        Ivan           Perišić      Spurs    Defender                 21.7   \n",
-       "6       Aaron         Cresswell   West Ham    Defender                  2.5   \n",
-       "7      Martin          Ødegaard    Arsenal  Midfielder                 14.3   \n",
-       "8     Gabriel  Martinelli Silva    Arsenal  Midfielder                 48.4   \n",
-       "9      Pascal              Groß   Brighton  Midfielder                 13.5   \n",
-       "10    Leandro          Trossard   Brighton  Midfielder                 27.8   \n",
-       "11     Miguel    Almirón Rejala  Newcastle  Midfielder                 35.5   \n",
-       "12       Ivan             Toney  Brentford     Forward                 19.0   \n",
-       "13     Erling           Haaland   Man City     Forward                 82.8   \n",
-       "14      Harry              Kane      Spurs     Forward                 27.4   \n",
+       "3       Diogo    Dalot Teixeira    Man Utd    Defender                 12.9   \n",
+       "4      Kieran          Trippier  Newcastle    Defender                 65.0   \n",
+       "5        Ivan           Perišić      Spurs    Defender                 21.5   \n",
+       "6       Aaron         Cresswell   West Ham    Defender                  2.4   \n",
+       "7      Martin          Ødegaard    Arsenal  Midfielder                 14.6   \n",
+       "8     Gabriel  Martinelli Silva    Arsenal  Midfielder                 48.2   \n",
+       "9      Pascal              Groß   Brighton  Midfielder                 13.4   \n",
+       "10    Leandro          Trossard   Brighton  Midfielder                 27.6   \n",
+       "11     Miguel    Almirón Rejala  Newcastle  Midfielder                 35.8   \n",
+       "12       Ivan             Toney  Brentford     Forward                 19.4   \n",
+       "13     Erling           Haaland   Man City     Forward                 82.9   \n",
+       "14      Harry              Kane      Spurs     Forward                 27.3   \n",
        "\n",
        "    actual_cost  total_points  ict_index  \n",
        "0           4.6            61       48.5  \n",
@@ -772,7 +775,7 @@
        "14         11.6           102      180.3  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +789,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Write the DataFrame to a database"
+    "# Write DataFrame to local PostgreSQL DB (Docker)"
    ]
   },
   {
@@ -847,11 +850,72 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write DataFrame to cloud PostgreSql DB (Supabase) "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# establish connection\n",
+    "\n",
+    "user=config.supabase_fpl_username\n",
+    "password=config.supabase_fpl_password\n",
+    "host='db.pdqpnebestkagqneooty.supabase.co'\n",
+    "port='5432'\n",
+    "database='postgres'\n",
+    "\n",
+    "conn = psycopg2.connect(\n",
+    "    database=database, user=user, password=password, host=host, port=port\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setting auto commit true\n",
+    "conn.autocommit = True\n",
+    "\n",
+    "# Creating a cursor object using the cursor() method\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Delete the contents of the table and load the dataframe\n",
+    "cursor.execute('''DROP TABLE IF EXISTS optsquads.fpl_squad''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use sqlalchemy engine to write to the DB\n",
+    "\n",
+    "engine_url = 'postgresql://' + user + ':' + password + '@' + host + '/' + database\n",
+    "\n",
+    "engine = create_engine(engine_url)\n",
+    "squad.to_sql('fpl_squad', engine, schema='optsquads')"
+   ]
   }
  ],
  "metadata": {
