--- a/squad_optimization/squad_optimizer.ipynb
+++ b/squad_optimization/squad_optimizer.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "dict_keys(['events', 'game_settings', 'phases', 'teams', 'total_players', 'elements', 'element_stats', 'element_types'])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +797,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The created dataframe is stored in the default PostgreSQL database (template1) running on Docker "
+    "The created dataframe is stored in the default PostgreSQL database (template1) running locally on Docker "
    ]
   },
   {
@@ -854,12 +854,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Write DataFrame to cloud PostgreSql DB (Supabase) "
+    "# Write DataFrame to cloud PostgreSQL DB (Supabase) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,6 +916,63 @@
     "engine = create_engine(engine_url)\n",
     "squad.to_sql('fpl_squad', engine, schema='optsquads')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Load cleaned data from API into Supabase"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The raw cleaned data from the API can be used for other ad-hoc analyses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Setting auto commit true\n",
+    "conn.autocommit = True\n",
+    "\n",
+    "# Creating a cursor object using the cursor() method\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Delete the contents of the table and load the dataframe\n",
+    "cursor.execute('''DROP TABLE IF EXISTS raw_fpl.dim_fpl_players''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "667"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use sqlalchemy engine to write to the DB\n",
+    "\n",
+    "engine_url = 'postgresql://' + user + ':' + password + '@' + host + '/' + database\n",
+    "\n",
+    "engine = create_engine(engine_url)\n",
+    "slim_elements_df.to_sql('dim_fpl_players', engine, schema='raw_fpl')"
+   ]
   }
  ],
  "metadata": {
@@ -934,7 +991,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 (tags/v3.10.4:9d38120, Mar 23 2022, 23:13:41) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
