--- a/squad_optimization/squad_optimizer.ipynb
+++ b/squad_optimization/squad_optimizer.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "dict_keys(['events', 'game_settings', 'phases', 'teams', 'total_players', 'elements', 'element_stats', 'element_types'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
    "source": [
     "# Filtering out only the necessary columns\n",
     "\n",
-    "slim_elements_df = elements_df[['first_name', 'second_name','team_name','position','news','selected_by_percent','in_dreamteam',\n",
+    "slim_elements_df = elements_df[['id', 'first_name', 'second_name','team_name','position','news','selected_by_percent','in_dreamteam',\n",
     "                                'now_cost','form','points_per_game','minutes','goals_scored','assists','clean_sheets',\n",
     "                                'goals_conceded','clean_sheets','goals_conceded','yellow_cards','red_cards','saves','bonus',\n",
     "                                'transfers_in','value_season','total_points','influence','creativity','threat','ict_index']]\n",
