Changed schedule on airflow

--- a/squad_optimization/squad_optimizer.ipynb
+++ b/squad_optimization/squad_optimizer.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# FPL API for fixtures\n",
+    "url = 'https://fantasy.premierleague.com/api/fixtures/'\n",
+    "response = requests.get(url)\n",
+    "fixtures_json = response.json()\n",
+    "\n",
+    "# store in pandas DF\n",
+    "fixtures_df = pd.DataFrame(fixtures_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +79,7 @@
        "dict_keys(['events', 'game_settings', 'phases', 'teams', 'total_players', 'elements', 'element_stats', 'element_types'])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +130,7 @@
     "slim_elements_df = elements_df[['id', 'first_name', 'second_name','team_name','position','news','selected_by_percent','in_dreamteam',\n",
     "                                'now_cost','form','points_per_game','minutes','goals_scored','assists','clean_sheets',\n",
     "                                'goals_conceded','clean_sheets','goals_conceded','yellow_cards','red_cards','saves','bonus',\n",
-    "                                'transfers_in','value_season','total_points','influence','creativity','threat','ict_index']]\n",
+    "                                'transfers_in','starts','value_season','total_points','influence','creativity','threat','ict_index']]\n",
     "\n",
     "# numeric columns:\n",
     "\n",
@@ -992,7 +1007,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4 (tags/v3.10.4:9d38120, Mar 23 2022, 23:13:41) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
